added posibility to rate book
