# src/router.js
@@ -8,6 +8,7 @@ const router = Router();
 router.get('/api/v1/books', book.getAll);
 router.post('/api/v1/books', book.create);
 router.get('/api/v1/books/:id', book.get);
+router.post('/api/v1/books/:id/rate', book.rate);
 router.delete('/api/v1/books/:id', book.delete);
 router.get('/api/v1/books/author/:id', book.getByAuthor);
 router.get('/api/v1/books/rating/:rating', book.getByRating);
